Updated surefire with dependency versions.